apps/base/media/immich/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: immich-deployment-server
          port: 2283
    - match: Host(`immich.${DOMAIN}`)
      kind: Rule
      services:
        - name: immich-deployment-server
          port: 2283
  tls:
    certResolver: letsencrypt
